Make Card Responsive

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <hr class="border-dashed text-[36px] font-extrabold mt-10 w-11/12 mx-auto">
     
     <!-- Card Section -->
-    <section class="flex flex-col items-center justify-center lg:justify-around mt-4 lg:mt-8 mx-auto lg:max-w-6xl">
+    <section class="flex flex-col lg:flex-row items-center justify-center lg:justify-around mt-4 lg:mt-8 mx-auto lg:max-w-6xl">
         <div class="card1 w-[250px] h-[240px] justify-center items-center text-center">
             <div class="radial-progress text-red-600" style="--value:87;" role="progressbar">87%</div>
             <h3 class="text-xl font-semibold">Prayer Facility</h3>
