Make Card Responsive

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="banner-image">
                 <img class="mx-auto w-[335px] h-[200px] lg:w-[1400px] lg:h-[550px]" src="./Images/1.png" alt="">
             </div>
-            <div class="lg:absolute bg-black max-w-80 h-[137px] lg:w-[556px] lg:h-[165px] lg:left-[870px] lg:right-[167px] lg:top-[350px] lg:bottom-[5300px] rounded-2xl justify-center lg:justify-center items-center lg:p-8 mx-auto mt-4">
+            <div class="lg:absolute bg-black w-[335px] h-[137px] lg:w-[556px] lg:h-[165px] lg:left-[870px] lg:right-[167px] lg:top-[350px] lg:bottom-[5300px] rounded-2xl md:rounded-2xl lg:rounded-2xl justify-center lg:justify-center items-center lg:p-8 md:mx-auto lg:mx-auto mx-auto mt-4">
                 <p class="text-xl font-semibold text-white bg-black text-left justify-start pb-2">Meet all the heroes from the field</p>
                 <p class="text-white text-left justify-start">Here you can find the world class hokey player who demonstrate their skill in hokey sports which blow your mind.</p>
             </div>
